Added openSUSE Build Service info

--- a/ChangeHistory.html
+++ b/ChangeHistory.html
@@ -96,6 +96,9 @@ Vista.  (Menu item images already worked on Vista and later.)</li>
 <li>Added scale selection to STL export.  (Previously it was always cm.)</li>
 <li>Updated Mac version to support pinch gesture for zooming and three-finger
 swipe gesture for panning.</li>
+<li>Added support of 
+<a href=https://build.opensuse.org/package/show?package=LDView&project=home%3Apbartfai>
+openSUSE Build Service</a></li>
 </ul>
 <b>Updates</b>
 <ul>
@@ -109,6 +112,7 @@ selected line that has hard-coded colors (not color 16).</li>
 <li>Disable transparency when one or more of the red back faces, green front
 faces, or blue neutral faces options is enabled, and BFC is enabled.</li>
 <li>Update POV export to improve generated file.</li>
+<li>Updated code to be compatible with Qt 5.x</li>
 </ul>
 <b>Bug Fixes</b>
 <ul>
