Update Downloads.html to refer to Git instead of CVS

--- a/Downloads.html
+++ b/Downloads.html
@@ -555,12 +555,12 @@ Windows, Linux, and Mac OS X (and maybe AIX).
 	<TR>
 		<TH>
 			<A NAME="LinuxBinaries">
-			<FONT SIZE="+2"><B>Linux Binaries from latest CVS snapshot</B></FONT><BR></A>
+			<FONT SIZE="+2"><B>Linux Binaries from latest Git snapshot</B></FONT><BR></A>
 		</TH>
 	</TR>
 </TABLE>
 <P>
-Linux binaries are compiled from latest CVS snapshot for most popular distributions 
+Linux binaries are compiled from latest Git snapshot for most popular distributions 
 (Arch, Centos, Debian, Fedora, RedHat, SLE, Scientific, OpenSUSE, Ubuntu) on 
 <a href=https://build.opensuse.org>OpenSUSE Build Service</a>:
 </P>
@@ -568,8 +568,6 @@ Linux binaries are compiled from latest CVS snapshot for most popular distributi
 https://build.opensuse.org/package/show/home:pbartfai/LDView</A></P>
 <P>Direct access to binary files: 
 <a href=http://download.opensuse.org/repositories/home:/pbartfai/>http://download.opensuse.org/repositories/home:/pbartfai/</a></p>
-<p>Note: Automatic LDraw library update feature on Ubuntu packeges compiled on 
-OpenSUSE Build Service is disabled because boost libraries are not available on OpenSUSE Build Service for Ubuntu due to licensing.</p>
 <HR>
 <P>
 <a href="https://github.com/"><img src="GitHub_Logo_Small.png" width="125" height="34" border="0" alt="GitHub Logo" align="right" /></a>
