Return to makeall script to compile the system

--- a/Downloads.html
+++ b/Downloads.html
@@ -525,9 +525,7 @@ although the instructions will likely work on other *nix systems that have Qt
 4.x/5.x.)
 </P>
 <P>
-To compile LDView, go into the Qt directory and type <TT>qmake ; make all</TT> 
-(the name of qmake command can contain version string on certain linux distributions 
-like <TT>qmake-qt4</TT> or <TT>qmake-qt5</TT>).  
+To compile LDView, go into the Qt directory and type <TT>./makeall</TT> 
 If it works, great.
 If not, you're mostly on your own.  Feel free to contact me if you can't figure
 out the problem, but bear in mind that I may not be able to help much.  LDView
