Integrate OBS Download page to GitHub Download page

--- a/Downloads.html
+++ b/Downloads.html
@@ -552,8 +552,15 @@ Linux binaries are compiled from latest Git snapshot for most popular distributi
 (Arch, Centos, Debian, Fedora, RedHat, SLE, Scientific, OpenSUSE, Ubuntu) on 
 <a href=https://build.opensuse.org>OpenSUSE Build Service</a>:
 </P>
-<P><A href=https://build.opensuse.org/package/show/home:pbartfai/LDView>
-https://build.opensuse.org/package/show/home:pbartfai/LDView</A></P>
+<object type="text/html" 
+   data="http://software.opensuse.org/download/package.iframe?project=home:pbartfai&package=ldview"
+   width="100%" height="100%">
+   <param name="src" 
+      value="http://software.opensuse.org/download/package.iframe?project=home:pbartfai&package=ldview" />
+   Your browser doesn't support objects, please continue to the
+   <a href="http://software.opensuse.org/download/package?project=home:pbartfai&package=ldview">
+   download page</a>
+</object>
 <P>Direct access to binary files: 
 <a href=http://download.opensuse.org/repositories/home:/pbartfai/>http://download.opensuse.org/repositories/home:/pbartfai/</a></p>
 <HR>
