Adding Travis CI sticker

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@ This project hosted by:
 <td><a href="https://github.com/"><img src="GitHub_Logo_Small.png" width="125" height="34" border="0" alt="GitHub Logo" align="right" /></a></td>
 </tr>
 </table>
+<A HREF="https://travis-ci.org/tcobbs/ldview"><IMG SRC="https://travis-ci.org/tcobbs/ldview.svg?branch=master"></A>
 <HR>
 <P>
 If you have any comments, questions, or suggestions, please e-mail me at
