ChangeHistory update for Linux

--- a/ChangeHistory.html
+++ b/ChangeHistory.html
@@ -94,6 +94,8 @@ line.</li>
 <li>Added support for -IniFile=&lt;path&gt; on the command line.</li>
 <li>Added Keep Right Side Up feature to Mac version.</li>
 <li>Added support for mixed-resolution torus primitives.</li>
+<li>Added FreeBSD packaging support</li>
+<li>Added AppImage packaging support</li>
 </ul>
 <b>Updates</b>
 <ul>
@@ -101,6 +103,7 @@ line.</li>
 when used to generate snapshots or perform exports from the command line.</li>
 <li>Update "What's This?" help in Windows version to work on modern versions
 of Windows.</li>
+<li>Updated Linux packaging scripts for RPM and Debian based distros</li>
 </li>
 </ul>
 <b>Bug Fixes</b>
