Add Appveyor badge

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ This project hosted by:
 </tr>
 </table>
 <A HREF="https://travis-ci.org/tcobbs/ldview"><IMG SRC="https://travis-ci.org/tcobbs/ldview.svg?branch=master"></A>
+<A HREF="https://ci.appveyor.com/project/tcobbs/ldview"><IMG SRC="https://ci.appveyor.com/api/projects/status/github/tcobbs/ldview?svg=true"></A>
 <HR>
 <P>
 If you have any comments, questions, or suggestions, please e-mail me at
