--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@ This project hosted by:
 </table>
 <A HREF="https://travis-ci.org/tcobbs/ldview"><IMG SRC="https://travis-ci.org/tcobbs/ldview.svg?branch=master"></A>
 <A HREF="https://ci.appveyor.com/project/tcobbs/ldview"><IMG SRC="https://ci.appveyor.com/api/projects/status/github/tcobbs/ldview?svg=true"></A>
+<A HREF="https://github.com/tcobbs/ldview/actions"><IMG SRC="https://github.com/tcobbs/ldview/workflows/Build%20LDView/badge.svg"></A>
 <HR>
 <P>
 If you have any comments, questions, or suggestions, please e-mail me at
