Travis CI logo added

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ This project hosted by:
 <td><a href="https://github.com/"><img src="GitHub_Logo_Small.png" width="125" height="34" border="0" alt="GitHub Logo" align="right" /></a></td>
 </tr>
 </table>
-<A HREF="https://travis-ci.org/tcobbs/ldview"><IMG SRC="https://travis-ci.org/tcobbs/ldview.svg?branch=master"></A>
+<A HREF="https://travis-ci.org/tcobbs/ldview"><IMG SRC="https://img.shields.io/travis/tcobbs/ldview.svg?label=travis&logo=travis"></A>
 <A HREF="https://ci.appveyor.com/project/tcobbs/ldview"><IMG SRC="https://ci.appveyor.com/api/projects/status/github/tcobbs/ldview?svg=true"></A>
 <A HREF="https://github.com/tcobbs/ldview/actions"><IMG SRC="https://github.com/tcobbs/ldview/workflows/Build%20LDView/badge.svg"></A>
 <HR>
