--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@ This project hosted by:
 <A HREF="https://travis-ci.org/tcobbs/ldview"><IMG SRC="https://img.shields.io/travis/tcobbs/ldview.svg?label=travis&logo=travis"></A>
 <A HREF="https://ci.appveyor.com/project/tcobbs/ldview"><IMG SRC="https://ci.appveyor.com/api/projects/status/github/tcobbs/ldview?svg=true"></A>
 <A HREF="https://github.com/tcobbs/ldview/actions"><IMG SRC="https://github.com/tcobbs/ldview/workflows/Build%20LDView/badge.svg"></A>
+<A HREF="https://github.com/tcobbs/ldview/releases"><IMG ALT="GitHub all releases" SRC="https://img.shields.io/github/downloads/tcobbs/ldview/total?logo=github">
 <HR>
 <P>
 If you have any comments, questions, or suggestions, please e-mail me at
