Last release badge added

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@ This project hosted by:
 <A HREF="https://ci.appveyor.com/project/tcobbs/ldview"><IMG SRC="https://ci.appveyor.com/api/projects/status/github/tcobbs/ldview?svg=true"></A>
 <A HREF="https://github.com/tcobbs/ldview/actions"><IMG SRC="https://github.com/tcobbs/ldview/workflows/Build%20LDView/badge.svg"></A>
 <A HREF="https://github.com/tcobbs/ldview/releases"><IMG ALT="GitHub all releases" SRC="https://img.shields.io/github/downloads/tcobbs/ldview/total?logo=github">
+<A HREF="https://github.com/tcobbs/ldview/releases"><IMG SRC="https://img.shields.io/github/release-date/tcobbs/ldview?logo=github"></A>
 <HR>
 <P>
 If you have any comments, questions, or suggestions, please e-mail me at
