Added latest release badge

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@ This project hosted by:
 <A HREF="https://github.com/tcobbs/ldview/actions"><IMG SRC="https://github.com/tcobbs/ldview/workflows/Build%20LDView/badge.svg"></A>
 <A HREF="https://github.com/tcobbs/ldview/releases"><IMG ALT="GitHub all releases" SRC="https://img.shields.io/github/downloads/tcobbs/ldview/total?logo=github">
 <A HREF="https://github.com/tcobbs/ldview/releases"><IMG SRC="https://img.shields.io/github/release-date/tcobbs/ldview?logo=github"></A>
+<A HREF="https://github.com/tcobbs/ldview/releases"><IMG SRC="https://img.shields.io/github/v/release/tcobbs/ldview?logo=github"></A>
 <HR>
 <P>
 If you have any comments, questions, or suggestions, please e-mail me at
