--- a/Downloads.html
+++ b/Downloads.html
@@ -246,6 +246,7 @@ SRC="LDViewIcon.gif" ALT="LDView Icon" ALIGN="LEFT" BORDER=0>ldview-4.4-debian-b
 <A HREF="https://github.com/tcobbs/ldview/releases/download/v4.4/ldview-osmesa-4.4-debian-buster.amd64.deb"><IMG
 SRC="LDViewIcon.gif" ALT="LDView Icon" ALIGN="LEFT" BORDER=0>ldview-osmesa-4.4-debian-buster.amd64.deb</A>
 (543KB)<BR CLEAR="ALL">
+<BR>
 <FONT SIZE="+1"><BR><B>Fedora 34</B></FONT><BR>
 64-bit RPM:<BR>
 <A HREF="https://github.com/tcobbs/ldview/releases/download/v4.4/ldview-4.4-0.2.fc34.x86_64.rpm"><IMG
@@ -260,6 +261,18 @@ SRC="LDViewIcon.gif" ALT="LDView Icon" ALIGN="LEFT" BORDER=0>ldview-qt5-4.4-0.2.
 64-bit OSMesa-based command line snapshot generator RPM:<BR>
 <A HREF="https://github.com/tcobbs/ldview/releases/download/v4.4/ldview-osmesa-4.4-0.2.fc34.x86_64.rpm"><IMG
 SRC="LDViewIcon.gif" ALT="LDView Icon" ALIGN="LEFT" BORDER=0>ldview-osmesa-4.4-0.2.fc34.x86_64.rpm</A>
+(880KB)<BR CLEAR="ALL">
+<BR>
+<FONT SIZE="+1"><BR><B>Centos/Oracle/RedHat 8</B></FONT><BR>
+64-bit Qt5.x RPM:<BR>
+<A HREF="https://github.com/tcobbs/ldview/releases/download/v4.4/ldview-qt5-4.4-0.2.el8.x86_64.rpm"><IMG
+SRC="LDViewIcon.gif" ALT="LDView Icon" ALIGN="LEFT" BORDER=0>ldview-qt5-4.4-0.2.el8.x86_64.rpm</A>
+(880KB)<BR CLEAR="ALL">
+<BR>
+<FONT SIZE="+1"><BR><B>openSUSE 15.3</B></FONT><BR>
+64-bit Qt5.x RPM:<BR>
+<A HREF="https://github.com/tcobbs/ldview/releases/download/v4.4/ldview-qt5-4.4-0.2.openSUSE150.x86_64.rpm"><IMG
+SRC="LDViewIcon.gif" ALT="LDView Icon" ALIGN="LEFT" BORDER=0>ldview-qt5-4.4-0.2.openSUSE150.x86_64.rpm</A>
 (880KB)<BR CLEAR="ALL">
 <BR>
 <FONT SIZE="+1"><BR><B>Alpine Linux</B></FONT><BR>
