--- a/Downloads.html
+++ b/Downloads.html
@@ -281,6 +281,17 @@ SRC="LDViewIcon.gif" ALT="LDView Icon" ALIGN="LEFT" BORDER=0>ldview-qt5-4.4-0.2.
 SRC="LDViewIcon.gif" ALT="LDView Icon" ALIGN="LEFT" BORDER=0>ldview-4.4-r1.apk</A>
 (819KB)<BR CLEAR="ALL">
 <BR>
+<FONT SIZE="+1"><BR><B>Arch Linux</B></FONT><BR>
+64-bit Qt5.x package:<BR>
+<A HREF="https://github.com/tcobbs/ldview/releases/download/v4.4/ldview-qt6-4.4-1-x86_64.pkg.tar.zst"><IMG
+SRC="LDViewIcon.gif" ALT="LDView Icon" ALIGN="LEFT" BORDER=0>ldview-qt6-4.4-1-x86_64.pkg.tar.zst</A>
+(819KB)<BR CLEAR="ALL">
+<BR>
+64-bit OSMesa-based command line snapshot generator package:<BR>
+<A HREF="https://github.com/tcobbs/ldview/releases/download/v4.4/ldview-osmesa-4.4-1-x86_64.pkg.tar.zst"><IMG
+SRC="LDViewIcon.gif" ALT="LDView Icon" ALIGN="LEFT" BORDER=0>ldview-osmesa-4.4-1-x86_64.pkg.tar.zst</A>
+(880KB)<BR CLEAR="ALL">
+<BR>
 For other Linux binaries, see the <A HREF="https://github.com/tcobbs/ldview/releases/tag/v4.4">LDView
 4.4 release</A> page on GitHub.
 <BR>
