Flatpak added to download list

--- a/Downloads.html
+++ b/Downloads.html
@@ -274,6 +274,9 @@ version 1.0 instead.  It is much older, and lacks many of the features of
 <BR>
 <H2>Linux</H2>
 <FONT SIZE="+1">Latest stable version: <B><A NAME="Linux4600">v4.6</A></B><BR></FONT>
+<FONT SIZE="+1"><BR><B>Flatpak</B></FONT><BR>
+<A HREF="https://flathub.org/apps/io.github.tcobbs.LDView"><IMG SRC="LDViewIcon.gif" ALT="LDView Icon" ALIGN="LEFT" BORDER=0></A><BR CLEAR="ALL">
+<BR>
 <FONT SIZE="+1"><BR><B>Ubuntu (23.04)</B></FONT><BR>
 64-bit DEB:<BR>
 <A HREF="https://github.com/tcobbs/ldview/releases/download/v4.6/ldview-qt5-4.6-ubuntu-24.04.amd64.deb"><IMG
