Qt: Wayland transparent background and ghosting display issue fixed #84

--- a/ChangeHistory.html
+++ b/ChangeHistory.html
@@ -113,6 +113,7 @@ not work.</li>
 macOS 26.</li>
 <li><b>Windows:</b> Fixed window maximize calculations on muli-monitor systems.</li>
 <li><b>Qt:</b> Remove double overwrite confirmation for Save Snapshot.</li>
+<li><b>Qt: Wayland</b> transparent background and ghosting fixed</li>
 </ul>
 </td></tr>
 
